# GNSSSignalSimGUI

./: .gitignore  LICENSE  README.md  pyproject.toml
data/configs/: IfGenTest.json  config.json
data/ifdatagen/: README.txt
src/: __init__.py  main.py
src/core/: __init__.py
src/core/config/: __init__.py  models.py  templates.py  validation.py
src/core/data/: __init__.py  ephemeris.py  rinex_parser.py  time_conversions.py
src/core/integration/: __init__.py  ifdatagen.py
src/core/utils/: __init__.py  logger.py  settings.py  version.py
src/core/workflow/: __init__.py  manager.py  smart_workflow.py  validation_engine.py
src/gui/: __init__.py  main_window.py
src/gui/dialogs/: __init__.py  about.py  map_dialog.py  masked_satellite_dialog.py  preferences.py  signal_power_dialog.py  template_dialog.py  trajectory_dialog.py
src/gui/tabs/: __init__.py  almanac_tab.py  basic_tab.py  ephemeris_time_tab.py  generate_tab.py  output_settings_tab.py  power_tab.py  signal_selection_tab.py  trajectory_tab.py
src/gui/widgets/: __init__.py  coordinate_picker.py  embedded_map.py
src/tests/: __init__.py
